--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,19 @@ spring.application.name=hackathonauth
 spring.security.secret=d6b93fc8-0ada-458e-b264-bcd152d07511
 
 # Configuração do banco de dados H2
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.h2.console.enabled=false
+# Configuração do banco de dados
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.password=
+#spring.datasource.username=sa
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/hackathon
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Configuração do JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
