refact: adicionando implementation

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation group: 'com.auth0', name: 'java-jwt', version: '4.4.0'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation group: 'org.postgresql', name: 'postgresql', version: '42.7.3'
 
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
