chore: atualizando host

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.security.secret=d6b93fc8-0ada-458e-b264-bcd152d07511
 #spring.datasource.password=
 #spring.datasource.username=sa
 
-spring.datasource.url=jdbc:postgresql://postgres:5432/hackathon
+spring.datasource.url=jdbc:postgresql://postgres-auth:5432/hackathon
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
